--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,9 @@
   },
   "dependencies": {
     "axios": "^0.16.2",
+    "fsevents": "^2.1.3",
     "materialize-css": "^0.100.2",
+    "node-pre-gyp": "^0.15.0",
     "react": "^16.0.0-alpha.13",
     "react-dom": "^16.0.0-alpha.13",
     "react-redux": "^5.0.5",
